--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,15 +5,25 @@ endif (M_LIBRARY)
 
 add_test(NAME ProFontGrid COMMAND genpng ${CMAKE_CURRENT_SOURCE_DIR}/profont/ProFont.ttf)
 
-# Discover all .ttf files in dejavu/ttf, create test for each
+# Discover all .ttf files in dejavu/ttf and stix/ttf, creating test for each
 file(GLOB DEJAVU_TTFS "${CMAKE_CURRENT_SOURCE_DIR}/dejavu/ttf/*.ttf")
 foreach(TTF ${DEJAVU_TTFS})
   get_filename_component(TTFNAME ${TTF} NAME_WE)
   add_test(
-    NAME "DejaVuGrid_${TTFNAME}"
+    NAME "${TTFNAME}"
     COMMAND genpng ${TTF}
   )
 endforeach()
+
+file(GLOB STIX_TTFS "${CMAKE_CURRENT_SOURCE_DIR}/stix/ttf/*.ttf")
+foreach(TTF ${STIX_TTFS})
+  get_filename_component(TTFNAME ${TTF} NAME_WE)
+  add_test(
+    NAME "${TTFNAME}"
+    COMMAND genpng ${TTF}
+  )
+endforeach()
+
 
 # Local Variables:
 # tab-width: 8
